// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard cockpit matches empty/onboarding snapshot 1`] = `
<DocumentFragment>
  <main
    class="dashboard dashboard-cockpit"
  >
    <div
      data-testid="account-selector"
    >
      account-selector
    </div>
    <header
      class="ops-hero"
    >
      <div
        class="ops-hero-main"
      >
        <p
          class="ops-eyebrow"
        >
          퇴직연금 · 계좌
        </p>
        <h1>
          운영 대시보드
        </h1>
        <p
          class="ops-hero-copy"
        >
          퇴직연금 규칙과 오늘 변동을 먼저 확인하고, 필요한 상세 영역으로 이어서 점검하세요.
        </p>
        <div
          aria-label="데이터 기준 정보"
          class="ops-source-row"
        >
          <span
            data-testid="data-badge"
          >
            badge
          </span>
          <span
            data-testid="data-badge"
          >
            badge
          </span>
          <span
            class="ops-asof"
          >
            기준 기준 시각 없음
          </span>
        </div>
      </div>
      <aside
        aria-label="빠른 작업"
        class="ops-command-panel"
      >
        <div
          class="ops-command-status"
        >
          <span
            class="ops-status-chip warning"
          >
            주의 필요
          </span>
          <p>
            데이터 기준 시각이 오래되었습니다.
          </p>
        </div>
        <div
          class="ops-header-actions"
        >
          <button
            aria-label="가격 동기화"
            type="button"
          >
            가격 동기화
          </button>
          <button
            aria-label="대시보드 새로고침"
            type="button"
          >
            새로고침
          </button>
        </div>
        <button
          aria-label="심층 차트 토글"
          class="ops-link-button ops-link-button-inline"
          type="button"
        >
          심층 분석 열기
        </button>
      </aside>
    </header>
    <div
      aria-label="stale data warning"
      class="ops-stale-banner"
      role="alert"
    >
      <strong>
        주의:
      </strong>
       일부 데이터 기준 시각이 오래되었습니다. 시세/원장을 다시 동기화해 주세요.
      <span
        class="stale-badge"
      >
        STALE
      </span>
    </div>
    <section
      aria-label="오늘의 우선순위"
      class="ops-priority-layout"
    >
      <div
        class="ops-priority-main"
      >
        <div
          class="ops-section-copy"
        >
          <h2>
            지금 확인할 핵심
          </h2>
          <p>
            총자산, 오늘 변동, 목표 편차부터 본 뒤 필요한 상세 패널로 내려가세요.
          </p>
        </div>
        <section
          aria-label="핵심 운영 카드"
          class="ops-cards ops-cards-primary"
        >
          <article
            aria-label="총자산 카드"
            class="ops-card ops-card-primary"
            role="button"
            tabindex="0"
          >
            <div
              class="ops-card-head"
            >
              <h3>
                총자산
              </h3>
            </div>
            <p
              class="ops-card-value "
            >
              ₩0
            </p>
            <p
              class="ops-card-desc"
            >
              원금 ₩0
            </p>
          </article>
          <article
            aria-label="오늘 변동 카드"
            class="ops-card ops-card-primary"
            role="button"
            tabindex="0"
          >
            <div
              class="ops-card-head"
            >
              <h3>
                오늘 변동
              </h3>
            </div>
            <p
              class="ops-card-value positive"
            >
              ₩0
            </p>
            <p
              class="ops-card-desc"
            >
              오늘 매매/입금 기준 변동
            </p>
          </article>
          <article
            aria-label="목표 대비 편차 카드"
            class="ops-card ops-card-primary"
            role="button"
            tabindex="0"
          >
            <div
              class="ops-card-head"
            >
              <h3>
                목표 대비 편차
              </h3>
            </div>
            <p
              class="ops-card-value negative"
            >
              -8.00%
            </p>
            <p
              class="ops-card-desc"
            >
              목표 수익률 8%
            </p>
          </article>
        </section>
      </div>
      <aside
        aria-label="오늘 볼 것"
        class="ops-focus-panel"
      >
        <div
          class="ops-focus-head"
        >
          <h2>
            오늘 볼 것
          </h2>
          <span
            class="ops-status-chip warning"
          >
            주의 필요
          </span>
        </div>
        <ul
          class="ops-focus-list"
        >
          <li>
            먼저 가격 동기화를 눌러 최신 시세로 맞춰주세요.
          </li>
          <li>
            이상 징후 2건을 확인해 주세요.
          </li>
          <li>
            다음 리밸런싱 예정: 2026. 5. 1.
          </li>
        </ul>
        <div
          class="ops-focus-actions"
        >
          <button
            type="button"
          >
            경고 보기
          </button>
          <button
            type="button"
          >
            보유 보기
          </button>
        </div>
      </aside>
    </section>
    <section
      aria-label="보조 운영 카드"
      class="ops-secondary-band"
    >
      <div
        class="ops-section-copy"
      >
        <h2>
          운영 요약
        </h2>
        <p>
          자산 비중, 경고, 최근 기록, 보유 상위 종목을 한 줄에서 빠르게 훑습니다.
        </p>
      </div>
      <section
        aria-label="보조 운영 카드"
        class="ops-cards ops-cards-secondary"
      >
        <article
          aria-label="데이터 이상 징후 카드"
          class="ops-card ops-card-secondary"
          role="button"
          tabindex="0"
        >
          <div
            class="ops-card-head"
          >
            <h3>
              데이터 이상 징후
            </h3>
          </div>
          <p
            class="ops-card-value "
          >
            2건
          </p>
          <p
            class="ops-card-desc"
          >
            데이터 기준 시각이 오래되었습니다.
          </p>
        </article>
        <article
          aria-label="자산 비중 카드"
          class="ops-card ops-card-secondary"
          role="button"
          tabindex="0"
        >
          <div
            class="ops-card-head"
          >
            <h3>
              자산 비중
            </h3>
          </div>
          <p
            class="ops-card-value positive"
          >
            위험 0.00%
          </p>
          <p
            class="ops-card-desc"
          >
            안전자산 0.00%
          </p>
        </article>
        <article
          aria-label="최근 일지 카드"
          class="ops-card ops-card-secondary"
          role="button"
          tabindex="0"
        >
          <div
            class="ops-card-head"
          >
            <h3>
              최근 일지
            </h3>
          </div>
          <p
            class="ops-card-value "
          >
            0건
          </p>
          <p
            class="ops-card-desc"
          >
            기록이 없습니다.
          </p>
        </article>
        <article
          aria-label="보유 상위 종목 카드"
          class="ops-card ops-card-secondary"
          role="button"
          tabindex="0"
        >
          <div
            class="ops-card-head"
          >
            <h3>
              보유 상위 종목
            </h3>
          </div>
          <p
            class="ops-card-value "
          >
            0종목
          </p>
          <p
            class="ops-card-desc"
          >
            보유 종목이 없습니다.
          </p>
        </article>
      </section>
    </section>
    <section
      aria-label="초기 설정 안내"
      class="ops-onboarding"
    >
      <h2>
        아직 보유 상품이 없습니다
      </h2>
      <p>
        매매일지에서 첫 매수 기록을 입력하면 운영 대시보드가 자동으로 채워집니다.
      </p>
      <div
        class="ops-onboarding-actions"
      >
        <button
          type="button"
        >
          매매일지로 이동
        </button>
        <button
          type="button"
        >
          상품 추이 보기
        </button>
      </div>
    </section>
    <section
      aria-label="상세 운영 패널"
      class="ops-drill-grid"
    >
      <section
        aria-label="데이터 이상 징후 상세"
        class="ops-panel"
        id="ops-drill-anomalies"
      >
        <div
          class="ops-panel-head"
        >
          <h2>
            데이터 이상 징후
          </h2>
          <span
            data-testid="data-badge"
          >
            badge
          </span>
        </div>
        <ul
          class="ops-list"
        >
          <li>
            데이터 기준 시각이 오래되었습니다.
          </li>
          <li>
            최근 매매일지 기록이 없습니다.
          </li>
        </ul>
      </section>
      <section
        aria-label="오늘의 이벤트"
        class="ops-panel"
        id="ops-drill-events"
      >
        <div
          class="ops-panel-head"
        >
          <h2>
            오늘의 이벤트
          </h2>
          <span
            data-testid="data-badge"
          >
            badge
          </span>
        </div>
        <p
          class="ops-next-rebalance"
        >
          다음 리밸런싱: 2026. 5. 1.
        </p>
        <p
          class="ops-empty"
        >
          오늘 기록된 이벤트가 없습니다.
        </p>
      </section>
      <section
        aria-label="최근 일지"
        class="ops-panel"
        id="ops-drill-journal"
      >
        <div
          class="ops-panel-head"
        >
          <h2>
            최근 일지 3개
          </h2>
          <span
            data-testid="data-badge"
          >
            badge
          </span>
        </div>
        <p
          class="ops-empty"
        >
          최근 기록이 없습니다.
        </p>
      </section>
      <section
        aria-label="관심 종목 상태"
        class="ops-panel"
        id="ops-drill-holdings"
      >
        <div
          class="ops-panel-head"
        >
          <h2>
            관심 종목 상태
          </h2>
          <span
            data-testid="data-badge"
          >
            badge
          </span>
        </div>
        <p
          class="ops-empty"
        >
          보유 종목이 없습니다.
        </p>
      </section>
    </section>
    <section
      aria-label="심층 분석"
      class="ops-insights"
    >
      <div
        class="ops-panel-head"
      >
        <h2>
          심층 분석
        </h2>
        <span
          class="ops-insight-caption"
        >
          필요할 때만 열기
        </span>
      </div>
      <p
        class="ops-empty"
      >
        첫 화면 성능을 위해 심층 차트는 필요할 때만 불러옵니다.
      </p>
    </section>
  </main>
</DocumentFragment>
`;

exports[`Dashboard cockpit matches error snapshot 1`] = `
<DocumentFragment>
  <main
    class="dashboard dashboard-cockpit"
  >
    <div
      data-testid="account-selector"
    >
      account-selector
    </div>
    <section
      aria-live="assertive"
      class="ops-error"
      role="alert"
    >
      <h1>
        운영 대시보드
      </h1>
      <p>
        네트워크 오류
      </p>
      <button
        aria-label="현황 다시 불러오기"
        type="button"
      >
        다시 시도
      </button>
    </section>
  </main>
</DocumentFragment>
`;

exports[`Dashboard cockpit matches loading snapshot 1`] = `
<DocumentFragment>
  <main
    class="dashboard dashboard-cockpit"
  >
    <div
      data-testid="account-selector"
    >
      account-selector
    </div>
    <section
      aria-label="운영 대시보드 로딩"
      aria-live="polite"
      class="ops-loading"
      role="status"
    >
      <h1>
        운영 대시보드
      </h1>
      <div
        class="ops-skeleton-grid"
      >
        <article
          aria-hidden="true"
          class="ops-skeleton-card"
        />
        <article
          aria-hidden="true"
          class="ops-skeleton-card"
        />
        <article
          aria-hidden="true"
          class="ops-skeleton-card"
        />
        <article
          aria-hidden="true"
          class="ops-skeleton-card"
        />
        <article
          aria-hidden="true"
          class="ops-skeleton-card"
        />
        <article
          aria-hidden="true"
          class="ops-skeleton-card"
        />
        <article
          aria-hidden="true"
          class="ops-skeleton-card"
        />
      </div>
    </section>
  </main>
</DocumentFragment>
`;
